8195744: Avoid calling ClassLoader.checkPackageAccess if security manager is not installed