@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -41,17 +41,29 @@ public class ProtectionDomainVerificationTest {
         ProcessBuilder pb = ProcessTools.createJavaProcessBuilder("-Xlog:protectiondomain=trace",
                                                                   "-Xmx128m",
                                                                   Hello.class.getName());
-        OutputAnalyzer out = new OutputAnalyzer(pb.start());
-        out.shouldContain("[protectiondomain] Checking package access");
-        out.shouldContain("[protectiondomain] pd set count = #");
+        new OutputAnalyzer(pb.start())
+        .shouldContain("[protectiondomain] Checking package access")
+        .shouldContain("[protectiondomain] pd set count = #")
+        .shouldHaveExitValue(0);
 
         // -Xlog:protectiondomain=debug
         pb = ProcessTools.createJavaProcessBuilder("-Xlog:protectiondomain=debug",
                                                                   "-Xmx128m",
                                                                   Hello.class.getName());
-        out = new OutputAnalyzer(pb.start());
-        out.shouldContain("[protectiondomain] Checking package access");
-        out.shouldNotContain("pd set count = #");
+        new OutputAnalyzer(pb.start())
+        .shouldContain("[protectiondomain] Checking package access")
+        .shouldNotContain("pd set count = #")
+        .shouldHaveExitValue(0);
+
+        // -Xlog:protectiondomain=debug
+        pb = ProcessTools.createJavaProcessBuilder("-Xlog:protectiondomain=trace",
+                                                   "-Xmx128m",
+                                                   "-Djava.security.manager=disallow",
+                                                   Hello.class.getName());
+        new OutputAnalyzer(pb.start())
+        .shouldNotContain("[protectiondomain] Checking package access")
+        .shouldNotContain("pd set count = #")
+        .shouldHaveExitValue(0);
     }
 
     public static class Hello {
